Move inline styles to external css file (3/6)

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -57,7 +57,7 @@
     <div class="row ">
         <div class="col-12 ">
 
-            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control" style="position:relative;top:30%;:500px;height:60px;outline:none;font-size: 40px;border:1px solid grey;border-radius:5px;" placeholder="Search..">
+            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control searchbarcss"  placeholder="Search..">
             <br>
             <div class="col-12 " style="position:relative;top:30%;">
                 <table class="table table-light" id="searchtable" style="border-collapse: separate;display:none;">
