Move inline styles to external css file (4/6)

--- a/html-files/future.html
+++ b/html-files/future.html
@@ -20,7 +20,7 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"  alt="ZhuoFan">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -59,7 +59,7 @@
     <div class="row ">
         <div class="col-12 ">
 
-            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control" style="position:relative;top:30%;:500px;height:60px;outline:none;font-size: 40px;border:1px solid grey;border-radius:5px;" placeholder="Search..">
+            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control searchbarcss" placeholder="Search..">
             <br>
             <div class="col-12 " style="position:relative;top:30%;">
                 <table class="table table-light" id="searchtable" style="border-collapse: separate;display:none;">
@@ -100,7 +100,7 @@
                 <div class="col-12 text-center ">
                     <div class="container rocket" id="rocket">
                         <div id="innerrocket">
-                            <img src="../secondaryschoolphoto/favpng_rocket-spacecraft-black-and-white-clip-art.png" class="" style="width:50px;" >
+                            <img src="../secondaryschoolphoto/favpng_rocket-spacecraft-black-and-white-clip-art.png" class="width50"  >
                             <div class="" id="line"></div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                     <br><br>
                     <h1>Future Career</h1>
                     <p>View my current course and my future prospect.</p>
-                    <img  onclick="window.location.href='future.html#daaareflection';" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+                    <img  onclick="window.location.href='future.html#daaareflection';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
 
                 </div>
             </div>
@@ -118,15 +118,15 @@
 <div class="container margintop" id="daaareflection">
     <div class="row">
         <div class="col-md-6 col-sm-12">
-            <h1>Diploma in<br><span id="type" style="color:royalblue"></span><span style="color:royalblue" class="cursor">|</span></h1>
+            <h1>Diploma in<br><span id="type" class="royalblue"></span><span  class="cursor royalblue">|</span></h1>
 
             <figure>
 
-                <blockquote class="blockquote" style="font-size:14px;">
+                <blockquote class="blockquote fontsize14" >
                     <br>
                     <p>"Being a DAAA student gives you the competitive edge of entering into these fast growing areas and path the way for your future studies and career. You can look forward to an interesting curriculum that covers a wide variety of data science topics including: open source tools and libraries, methodologies, Python, databases, data visualization, data analysis, and machine learning."</p>
                 </blockquote>
-                <figcaption class="blockquote-footer" style="font-size:12px;">
+                <figcaption class="blockquote-footer fontsize12" >
                     Extracted from <cite title="Source Title">Singapore Polytechnic Website</cite>
                 </figcaption>
             </figure>
@@ -151,7 +151,7 @@
             <div class="catt col-lg-3 col-md-6 col-sm-6" >
                 <div class="card" id='card1' style="width: 20rem; height: 25rem;">
                     <div id="card1font">
-                        <img src="../spphoto/sp.jpg" style="height:240px;" class="card-img-top" alt="...">
+                        <img src="../spphoto/sp.jpg"  class="card-img-top cardimg1" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">First Impression</h3>
                         </div>
@@ -159,8 +159,8 @@
                     <div id="card1backside">
                         <div class="container row aligncard">
                             <div class="text-center">
-                                <img src="../cardicons/landscape.svg" style="height:50px;">
-                                <p><strong>When I first walked into SP on 14 April 2021 for the <span style="color:royalblue">freshman orientation program</span>, I was actually  <span style="color:mediumseagreen">kind of excited </span> to meet new people and see new things.</strong></p>
+                                <img src="../cardicons/landscape.svg" class="cardimagestyle">
+                                <p><strong>When I first walked into SP on 14 April 2021 for the <span class="royalblue">freshman orientation program</span>, I was actually  <span class="mediumgreen">kind of excited </span> to meet new people and see new things.</strong></p>
                             </div>
                             <div class="col text-center">
                                 <button type="button" onclick="window.location.href='sp.html';" class="btn btn-primary">Look at the experience</button>
@@ -172,7 +172,7 @@
             <div class="catt col-lg-3 col-md-6 col-sm-6" >
                 <div class="card" id='card2' style="width: 20rem; height: 25rem;">
                     <div id="card2font">
-                        <img src="../spphoto/daaa.jpg" style="height:240px;" class="card-img-top" alt="...">
+                        <img src="../spphoto/daaa.jpg"  class="card-img-top cardimg1" alt="...">
                         <div class="card-body">
                             <h3 class="card-title">My Classmates</h3>
                         </div>
@@ -180,8 +180,8 @@
                     <div id="card2backside">
                         <div class="container row aligncard">
                             <div class="text-center">
-                                <img src="../cardicons/collaboration.svg" style="height:50px;">
-                                <p><strong>My classmates all come from <span style="color:orange">different backgrounds</span>.For some of them,we have <span style="color:red">already</span> knew each other previously.Know more about how my classmates are.</strong></p>
+                                <img src="../cardicons/collaboration.svg" class="cardimagestyle">
+                                <p><strong>My classmates all come from <span class="orange">different backgrounds</span>.For some of them,we have <span class="red">already</span> knew each other previously.Know more about how my classmates are.</strong></p>
 
                             </div>
                             <div class="col text-center">
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 text-end">
-                <h1><span style="color:forestgreen">Experience </span>In Course</h1>
+                <h1><span class="forestgren">Experience </span>In Course</h1>
                 <p>School have started for around 5 months.In this 5 months,I have learned more about proposal writing ,critical thinking , fundamental of computing,Javascript,HTML,CSS,BootStrip5(Front End Web Development) and etc.I have also understood how to use them to help me.I have also learn some Mathematics that is somehow related to my course.In this 5 month ,I have realise that the saying that "Poly is easy"is a scam.In SP,there is a lot of self directed learning and self responsibility.We need do a lot of search up to make ourself to be able to understand further apart from the content taught in lessons.But overall,I think the course is manageable if you are willing to spend effort and time. View more about the experience in SP here.</p>
             </div>
 
@@ -203,23 +203,23 @@
 <div class="container margintop">
     <div class="row" id="jobsection">
         <div class="col-sm-12 col-md-6">
-            <h1>Future <span style="color:orangered">Jobs</span> And <span style="color:mediumpurple" >Opportunities</span></h1>
+            <h1>Future <span class="orangered">Jobs</span> And <span class="purplecolor" >Opportunities</span></h1>
         <p>Well, being in an AI course allows you to be in a lot of sectors in the future as a lot of industries are transforming to become more digitized and AI & data analytics are the key underpinning technologies for transforming these industries like medical, manufacturing, etc. However, I feel that I think I am still aiming to be in the software area as this is my dream from young. I think that this course together with further studies will allow me to be able to integrate AI technology into software and make software smarter to provide convenience to people.
 
         </p>
         </div>
         <div class="col-sm-12 col-md-6 text-end">
             <!----<a href="https://iconscout.com/icons/cloud" target="_blank">Cloud Icon</a> by <a href="https://iconscout.com/contributors/chamedesign" target="_blank">Chameleon Design</a>--->
-            <img class="greyscale" src="../prospectphoto/cloud.svg" id='cloud' style="height:300px;">
+            <img class="greyscale cloudsvg" src="../prospectphoto/cloud.svg" id='cloud' >
         </div>
     </div>
 </div>
 
-<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+<div class="zindex99 position-fixed bottom-0 end-0 p-3" >
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
