Move inline styles to external css file (5/6)

--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -33,7 +33,7 @@
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | Secondary School</a>
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | Secondary School</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -73,7 +73,7 @@
     <div class="row ">
         <div class="col-12 ">
             <!--On typing ,search matching-->
-            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control" style="position:relative;top:30%;:500px;height:60px;outline:none;font-size: 40px;border:1px solid grey;border-radius:5px;" placeholder="Search..">
+            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control searchbarcss"  placeholder="Search..">
             <br>
             <!--Display search result in table-->
             <div class="col-12 " style="position:relative;top:30%;">
@@ -113,7 +113,7 @@
 <!--Slideshow element-->
 <div class="container-fluid grey margintop textfly1" >
     <div class="container d-flex justify-content-center">
-        <div id="carouselExampleCaptions" class="carousel slide" style="width:804px;box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide slidecarousell" data-bs-ride="carousel">
            <!--Number of indicator-->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -131,26 +131,26 @@
             <!--Captions for different image while slideshow-->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 style="color:black;">3 Opal Racial Harmony Day 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/im.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/im.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg"  class="carouselphotosize d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
@@ -158,44 +158,44 @@
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"   class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg"   class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>National Day Celebration 2020</h5>
                     </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"   class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Dinner of Meet The Parent Session 2020</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg"  class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"   class="d-block w-100 carouselphotosize" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Student Leader Training Camp <br>Facilitator Committee</h5>
                     </div>
@@ -223,7 +223,7 @@
         <div class=" text-center">
             <p>Swipe to know more</p>
             <!--Upon clicked ,slide to the first section-->
-            <img  onclick="window.location.href='secondary.html#secreflection';" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+            <img  onclick="window.location.href='secondary.html#secreflection';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
         </div>
     </div>
 </div>
@@ -234,7 +234,7 @@
         <!--For medium screen size and about ,2 element on same line .For small screen size (ie.phone),1 element per line-->
         <div class="col-md-6 col-sm-12">
 
-    <h1>Some Words After <br><span class="typing" id="type" style="color:royalblue"></span><span style="color:royalblue" class="cursor">|</span> </h1>
+    <h1>Some Words After <br><span class="typing royalblue" id="type" ></span><span  class="cursor royalblue">|</span> </h1>
     <p>I was a student of Dunearn Secondary School from 2017 to 2020. I have enjoyed myself in these 4 years of secondary school life. In these 4 years, I have experienced a lot of things, some are bad, some are good, but all of these have allowed me to mature into the person I am today --one perceptive to the needs of others and one who dares to lead with passion and purpose. I am thankful to all my teachers and friends that have walked with me on this 4-year journey.
 
         4 years is really fast, till today I could still remember the summer that we all studied hard in classes, trying to understand everything the teacher said and to put it into practice. I could also remember the nights when everyone was sleeping and we are trying to complete the practice papers that have never seemed to have an end….</p>
@@ -242,7 +242,7 @@
 
         <!--Corresponding images another half in First section-->
         <div class=" col-md-6 col-sm-12 text-end">
-<img src="../secondaryschoolphoto/kissclipart-graduation-vector-png-clipart-square-academic-cap-cb399ded5d6237b4.png" style="height: 300px;">
+<img src="../secondaryschoolphoto/kissclipart-graduation-vector-png-clipart-square-academic-cap-cb399ded5d6237b4.png" class="academiccap">
         </div>
 
     </div>
@@ -256,7 +256,7 @@
         <div class="row" id="learnertoday">
             <!--text of section at center and occupy full line-->
             <div class="col-md-12 col-sm-12 text-center ">
-                <h1><span style="color:mediumpurple">Learner</span>  Today,<span style="color:orange"> Leader</span> Tomorrow</h1>
+                <h1><span class="purplecolor">Learner</span>  Today,<span class="orange"> Leader</span> Tomorrow</h1>
                 <p>In these 4 years, I think I have grown especially in terms of leadership. My school has transformed me into a leader, till today I am still really thankful to the teachers that have trusted me and given me the opportunity to lead. In 2017, as a Secondary 1 student, I was lucky to get selected to become a junior student councillor which enabled me to learn a lot of things like to take initiative, be more responsible, and speak confidently. I have taken all the morning duties and the events I am participating in seriously. I always get to learn more things as the debrief after every event has allowed me to reflect on things that I have not done so well which enable me to correct myself and be a better leader. In 2019, I was nominated and chosen to be part of the Executive Committee of the 15th Student Council. This means that I will have more responsibilities in hand. As an exco member, I have always tried my best to plan the events as detailed as possible and to execute them smoothly. Through the events I have planned and led, I have a further understanding of leadership skills.I knew more about the responsibility in me.Additionally,I also learn more about proposal making and how to be flexible when carrying out events. I learn to react fast to unexpected situations, I learn to take care of my teammates, I learn to listen to other people’s opinions. While planning and executing events, I also forged strong bonds with my fellow councillors.As a senior , I always tried my best to teach my junior everything I have learned just like what my seniors have taught me. Aside from my student council role, I am also a physics representative for 3 years, a geographic representative for 1 year, and a staff sergeant in NPCC.I am really thankful to the everyone that has trusted me.</p>
           <br><br>
             </div>
@@ -344,7 +344,7 @@
         </div>
         <!--Text at right occupying half of the line for medium size screen,and full line for small screen-->
         <div class="col-md-6 col-sm-12 text-end">
-            <h1>Lifelong <span style="color:forestgreen">Friends</span></h1>
+            <h1>Lifelong <span class="forestgren">Friends</span></h1>
             <p>I am glad that through the 4 years I have met a group of friends that can be trusted. Whenever we have projects or activities that require multiple people, they will be the first ones to join me. During recess or after school, we will always hang out together in the library or the school canteen. I could still remember that it was these people that had to stay up until 2 am with me to finish work or projects together. Whenever I have any questions or needs any help, I am confident to say that they are there.We have even formed our group called the “Dunearn Executive Committee”, the name may sound weird but as you can see from the name, we hope that we can progress together as a whole and make our school proud. Well, although at the end of 4 years, we didn't manage to achieve something great but at least we tried. We have gone to a lot of competitions together (although most of them we get participation)but we enjoy working hard together for a common goal. To enrich our life in secondary school, we also go to the science center to be a volunteer regularly, till today, we have volunteered more like 150 hours in the science center.</p>
         </div>
     </div>
@@ -357,12 +357,12 @@
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 <!--Text at left occupying half of the line for medium size screen,and full line for small screen-->
-                <h1>Lastly,<span style="color:orangered">Conclusion</span></h1>
+                <h1>Lastly,<span class="orangered">Conclusion</span></h1>
                 <p>In this school,I have gone through a lot of fun and meaningful events/projects like Geographic Investigation,Self Initial VIA Project,CNY Celebrations,SOOP program，Science and technology challenges and more.I have also had a lot of my first times, like my first time to dance, to speak in front of the whole school, lead on projects, going to a camp, etc. These are the things that I have never imagined in the past, I am thankful that Dunearn has allowed me to experience so many things and made me grown not only in terms of knowledge but also in character. If I were to choose my secondary school again, I am very sure that I will choose Dunearn again :)</p>
             </div>
             <!--Photo at right occupying half of the line for medium size screen,and full line for small screen(next line)-->
             <div class="col-md-6 col-sm-12 text-end">
-                <img src="../secondaryschoolphoto/dunearnlogo.png" style="height:300px">
+                <img src="../secondaryschoolphoto/dunearnlogo.png" class="dunearnlogo">
             </div>
         </div>
     </div>
@@ -370,12 +370,12 @@
 
 
 <!--Toast,welcome message.-->
-<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+<div class="zindex99 position-fixed bottom-0 end-0 p-3" >
 
     <div class="toast" id="secwelcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
